# Classroom-voice-notes

./: .env.template  .gitignore  README.md  classroom_voice_notes_product_design.md  pyproject.toml  run.py
.agent/: ARCHITECTURE.md
.agent/agents/: documentation-writer.md
.agent/rules/: GEMINI.md  LESSON_RESOURCES.md
.agent/scripts/: checklist.py  generate_assessment.js  generate_assessment_fractions.js  generate_planner.js  generate_pptx.js  slides.html
.agent/workflows/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
app/: controller.py
app/audio/: input_manager.py  recorder.py  worker.py
app/audit/: audit_logger.py
app/commands/: engine.py  worker.py
app/config/: settings.py
app/destinations/: __init__.py  obsidian_writer.py
app/ollama_router/: __init__.py  classifier.py  policy_gate.py
app/transcription/: transcriber.py  worker.py
app/ui/: main_window.py  recording_indicator.py
app/utils/: downloader.py  paths.py
app/wakeword/: engine.py  worker.py
classroom_voice_notes.egg-info/: PKG-INFO
models/wakewords/: hey_joshua.onnx
scripts/: test_classifier.py
specs/: constitution.md
specs/templates/: plan-template.md  spec-template.md  tasks-template.md
tests/integration/: test_input_manager.py  test_recorder.py  test_router.py  test_transcriber.py
tests/unit/: test_audio_worker.py  test_commands.py  test_controller.py  test_downloader.py  test_main_window.py  test_obsidian_writer.py  test_recording_indicator.py  test_run.py  (+2 more)
(+61 files in other folders)
